adjustments html, completed header,first container

--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
     </header>
 
     <main>
-        <div>
+        <div class="first-container">
             <!-- bottoni e border-bottom -->
-            <button class="bg-lightblue">Add Task</button>
-            <button class="bg-white">Add Section</button>
+            <div class="button">
+                <button class="bg-lightblue">
+                Add Task
+                </button>
+                <button class="bg-white">
+                Add Section
+                </button>
+            </div>
         </div>
-        <div>
+        <div class="elenco">
             <div>
                 New Task
                 <ul>
