adjustments html, working on buttons

--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
         <div class="first-container">
             <!-- bottoni e border-bottom -->
             <div class="button">
-                <button class="bg-lightblue">
+                <span class="bg-lightblue    first-special-button-container">
                 Add Task
-                </button>
-                <button class="bg-white">
+                </span>
+                <span class="bg-white second-special-button-container">
                 Add Section
-                </button>
+                </span>
             </div>
         </div>
         <div class="elenco">
             <div>
                 New Task
                 <ul>
-                    <li>Quarterly Newsletter</li>
+                    <li>Quarterly Newsletter
+                        <span class="bg-lightblue special-button-elenco">
+                            Editorial
+                        </span>
+                    </li>
                 </ul>
             </div>
 
