added every button and ajusted file name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <!-- logo e titolo -->
-        <img src="img/logo copia.png" alt="Logo">
+        <img src="img/logo-copia.png" alt="Logo">
         <h1>Toboolist</h1>
     </header>
 
@@ -42,10 +42,26 @@
             <div>
                 Today
                 <ul>
-                    <li>Recruiting blog post</li>
-                    <li>Mobile app launch</li>
-                    <li>Interview John H.</li>
-                    <li>Summit update to mobile storefronts</li>
+                    <li>Recruiting blog post
+                        <span class="bg-lightblue special-button-elenco">
+                            Editorial
+                        </span>
+                    </li>
+                    <li>Mobile app launch
+                        <span class="bg-purple special-button-elenco">
+                            Q1 Goals
+                        </span>
+                    </li>
+                    <li>Interview John H.
+                        <span class="bg-lightgreen special-button-elenco">
+                            Recruiting
+                        </span>
+                    </li>
+                    <li>Summit update to mobile storefronts
+                        <span class="bg-orange special-button-elenco">
+                            Mobile
+                        </span>
+                    </li>
                 </ul>
             </div>
 
@@ -53,9 +69,21 @@
                 Upcoming
                 <ul>
                     <li>Schedule meeting with Alex</li>
-                    <li>Homepage refresh</li>
-                    <li>Onboard new Sales team members</li>
-                    <li>Review editorial calendar</li>
+                    <li>Homepage refresh
+                        <span class="bg-pink special-button-elenco">
+                            Website
+                        </span>
+                    </li>
+                    <li>Onboard new Sales team members
+                        <span class="bg-peagreen special-button-elenco">
+                            Sales
+                        </span>
+                    </li>
+                    <li>Review editorial calendar
+                        <span class="bg-lightblue special-button-elenco">
+                            Editorial
+                        </span>
+                    </li>
                 </ul>
             </div>
         </div>
