--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                 </span>
             </div>
         </div>
+
         <div class="elenco">
-            <div>
-                New Task
+            <div class="tasks">
+                &#9660; <strong>New Task</strong>
                 <ul>
-                    <li>Quarterly Newsletter
+                    <li>&#9989;Quarterly Newsletter
                         <span class="bg-lightblue special-button-elenco">
                             Editorial
                         </span>
@@ -39,25 +40,25 @@
                 </ul>
             </div>
 
-            <div>
-                Today
+            <div class="tasks">
+                &#9660; <strong>Today</strong>
                 <ul>
-                    <li>Recruiting blog post
+                    <li>&#9989;Recruiting blog post
                         <span class="bg-lightblue special-button-elenco">
                             Editorial
                         </span>
                     </li>
-                    <li>Mobile app launch
+                    <li>&#9989;Mobile app launch
                         <span class="bg-purple special-button-elenco">
                             Q1 Goals
                         </span>
                     </li>
-                    <li>Interview John H.
+                    <li>&#10060;Interview John H.
                         <span class="bg-lightgreen special-button-elenco">
                             Recruiting
                         </span>
                     </li>
-                    <li>Summit update to mobile storefronts
+                    <li>&#9989;Summit update to mobile storefronts
                         <span class="bg-orange special-button-elenco">
                             Mobile
                         </span>
@@ -65,21 +66,21 @@
                 </ul>
             </div>
 
-            <div>
-                Upcoming
+            <div class="tasks">
+                &#9660; <strong>Upcoming</strong>
                 <ul>
-                    <li>Schedule meeting with Alex</li>
-                    <li>Homepage refresh
+                    <li>&#10060;Schedule meeting with Alex</li>
+                    <li>&#9989;Homepage refresh
                         <span class="bg-pink special-button-elenco">
                             Website
                         </span>
                     </li>
-                    <li>Onboard new Sales team members
+                    <li>&#9989;Onboard new Sales team members
                         <span class="bg-peagreen special-button-elenco">
                             Sales
                         </span>
                     </li>
-                    <li>Review editorial calendar
+                    <li>&#9989;Review editorial calendar
                         <span class="bg-lightblue special-button-elenco">
                             Editorial
                         </span>
