corrected check mark and x mark

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="tasks">
                 &#9660; <strong>New Task</strong>
                 <ul>
-                    <li>&#9989;Quarterly Newsletter
+                    <li><span class="green-mark">&#x1F5F8;</span> Quarterly Newsletter
                         <span class="bg-lightblue special-button-elenco">
                             Editorial
                         </span>
@@ -43,22 +43,22 @@
             <div class="tasks">
                 &#9660; <strong>Today</strong>
                 <ul>
-                    <li>&#9989;Recruiting blog post
+                    <li><span class="green-mark">&#x1F5F8;</span> Recruiting blog post
                         <span class="bg-lightblue special-button-elenco">
                             Editorial
                         </span>
                     </li>
-                    <li>&#9989;Mobile app launch
+                    <li><span class="green-mark">&#x1F5F8;</span> Mobile app launch
                         <span class="bg-purple special-button-elenco">
                             Q1 Goals
                         </span>
                     </li>
-                    <li>&#10060;Interview John H.
+                    <li><span class="red-x">&#739;</span> Interview John H.
                         <span class="bg-lightgreen special-button-elenco">
                             Recruiting
                         </span>
                     </li>
-                    <li>&#9989;Summit update to mobile storefronts
+                    <li><span class="green-mark">&#x1F5F8;</span> Summit update to mobile storefronts
                         <span class="bg-orange special-button-elenco">
                             Mobile
                         </span>
@@ -69,18 +69,18 @@
             <div class="tasks">
                 &#9660; <strong>Upcoming</strong>
                 <ul>
-                    <li>&#10060;Schedule meeting with Alex</li>
-                    <li>&#9989;Homepage refresh
+                    <li><span class="red-x">&#739;</span> Schedule meeting with Alex</li>
+                    <li><span class="green-mark">&#x1F5F8;</span> Homepage refresh
                         <span class="bg-pink special-button-elenco">
                             Website
                         </span>
                     </li>
-                    <li>&#9989;Onboard new Sales team members
+                    <li><span class="green-mark">&#x1F5F8;</span> Onboard new Sales team members
                         <span class="bg-peagreen special-button-elenco">
                             Sales
                         </span>
                     </li>
-                    <li>&#9989;Review editorial calendar
+                    <li><span class="green-mark">&#x1F5F8;</span> Review editorial calendar
                         <span class="bg-lightblue special-button-elenco">
                             Editorial
                         </span>
